deploy/base/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  selector:
    app.kubernetes.io/name: admin
  ports:
    - name: http
      port: 8080
      targetPort: http
