deploy/base/admin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: admin
spec:
  host: hkh-admin.vdzonsoftware.nl
  to:
    kind: Service
    name: admin
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
