deploy/base/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
spec:
  to:
    kind: Service
    name: backend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
